# cxx-archive

./: .gitignore  README.md  crc32.h
ffmpeg-grabdc/: README.md
ffmpeg-grabdc/libavdevice/: grabdc.c  wavein.c
ffmpeg-wavein/: README.md
libkonfiture-cxx/: CMakeLists.txt  FlexLexer.h  LICENSE  README.md  konfiture.ll  konfiture.yy  konfiture_attribute.hh  konfiture_driver.hh  konfiture_lexer.hh  konfiture_node.hh  konfiture_utils.hh  main.cc
libkonfiture-cxx/examples/: comments.conf  scheme.conf  simple.conf
qt-checkforupdates/: LICENSE  README.md  updater.cpp  updater.h  version.h
qt-removabledevice/: LICENSE  README.md  removabledevice.cpp  removabledevice.h  removabledevicemanager.cpp  removabledevicemanager.h
